--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "cordova-plugin-x-socialsharing": "^6.0.4",
+    "howler": "^2.2.4",
     "ionicons": "^7.0.0",
     "localforage-cordovasqlitedriver": "^1.8.0",
     "rxjs": "~7.8.0",
@@ -56,6 +57,7 @@
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.4.1",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@types/howler": "^2.2.11",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
